# bible-io-package-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic_usage.rs
src/: bible.rs  bible_books_enum.rs  bible_class.rs  book.rs  chapter.rs  lib.rs  search_index.rs  verse.rs
tests/: common.rs  full_name_tests.rs  integration_tests.rs  reference_tests.rs  search_tests.rs  verse_text_tests.rs
