[package]
name = "bible-io"
version = "1.0.0"
edition = "2021"
description = "A Rust library for working with Bible text data structures"
authors = ["Moty Fainer"]
license = "MIT"
repository = "https://github.com/m0ty/bible-json-package-rs"
keywords = ["bible", "scripture", "text-processing"]
categories = ["text-processing", "parsing"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
simd-json = { version = "0.15.1", features = ["serde_impl"] }
indexmap = { version = "2.10.0", features = ["serde"] }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
